--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="html\" />
     <Folder Include="uploads\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\upload.html" />
   </ItemGroup>
 
 </Project>
